--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,7 +143,7 @@ h1 {
   }
 }
 
-@media (max-width: 820px) { /* 768 */
+@media (max-width: 820px) {
   .main {
       margin-left: 0px;
       margin: 0 auto;
